--- a/2D_CA_ice.ipynb
+++ b/2D_CA_ice.ipynb
@@ -366,7 +366,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Diffusor:\n",
+    "    \"\"\"FFIILLLL OOUUTT\"\"\"\n",
+    "\n",
+    "    diffusor_submask_inner = np.array(\n",
+    "        [\n",
+    "            [0, 1/6, 1/6],\n",
+    "            [1/6, 0, 1/6],\n",
+    "            [1/6, 1/6, 0]\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    diffusor_submask_lower_ragged = np.array(\n",
+    "        [\n",
+    "            [0, 1/3],\n",
+    "            [1/3, 0],\n",
+    "            [1/3, 0]\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    diffusor_submask_upper_ragged = np.array(\n",
+    "        [\n",
+    "            [0, 1/6, 1/6],\n",
+    "            [1/3, 0, 0],\n",
+    "            [1/6, 1/6, 0]\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    diffusor_submask_flush = np.array(\n",
+    "        [\n",
+    "        [1/6, 1/3],\n",
+    "        [0, 1/3],\n",
+    "        [1/6, 0]\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    def __init__(self, L):\n",
+    "        \"\"\"\n",
+    "        LLAPACK\n",
+    "        \"\"\"\n",
+    "\n",
+    "        self.L = L\n",
+    "        self.W = (L+1)/2\n",
+    "\n",
+    "\n",
+    "        for line in range(self.L):\n",
+    "            for col in range(self.W):\n",
+    "                    \n",
+    "                "
+   ]
   },
   {
    "cell_type": "code",
@@ -396,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 16:56:21) \n[GCC 10.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
