--- a/2D_CA_ice.ipynb
+++ b/2D_CA_ice.ipynb
@@ -189,103 +189,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Diffusor:\n",
-    "\n",
-    "    def __init__(self, a):\n",
-    "        self.a = a\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        return f\"You must be looking for '{self.a}'\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = Diffusor(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = np.zeros((100,100,100,100))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B = np.zeros((1000,1000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(100):\n",
-    "    np.tensordot(A, B)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.shape(A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sat_array_empty[1,1] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.tensordot(sat_array_empty[0:3,0:3], diffusor_submask_inner)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class Converter:\n",
     "    \"\"\"\n",
     "    A class that allows for conversion from cartesian coordinates\n",
@@ -358,6 +261,27 @@
     "        \"\"\"\n",
     "        coords = self.coord_array[index]\n",
     "        return coords[0], coords[1]\n",
+    "\n",
+    "    def submask_flattener(self, submask, location_coords, center_coords):\n",
+    "        \"\"\"\n",
+    "        FKLDJALKFJLKDASJFKLADS\n",
+    "        \"\"\"\n",
+    "        submask_shape = np.shape(submask)\n",
+    "        flattened_array = np.zeros(self.total_indices)\n",
+    "    \n",
+    "        for line in range(submask_shape[0]):\n",
+    "            for col in range(submask_shape[1]):\n",
+    "                \n",
+    "                submask_elem = submask[line, col]\n",
+    "                print(submask_elem)\n",
+    "                physical_line = line - center_coords[0] + location_coords[0]\n",
+    "                physical_col = col - center_coords[1] + location_coords[1]\n",
+    "\n",
+    "                flattened_array[self.coords_to_index((physical_line, physical_col))] = submask_elem\n",
+    "                print(self.coords_to_index((physical_line, physical_col)))\n",
+    "\n",
+    "        return flattened_array\n",
+    "\n",
     "\n"
    ]
   },
@@ -368,7 +292,18 @@
    "outputs": [],
    "source": [
     "class Diffusor:\n",
-    "    \"\"\"FFIILLLL OOUUTT\"\"\"\n",
+    "    \"\"\"\n",
+    "    A class that manages the diffusion of the water \n",
+    "    saturation field and its boundary conditions near \n",
+    "    ice cells through a relaxation style method.\n",
+    "\n",
+    "    Attributes:\n",
+    "        L (int): Vertical breadth of simulation sites\n",
+    "        converter_obj (obj): Pre-initialized instance of the `Converter` class\n",
+    "\n",
+    "    Methods:\n",
+    "        À FAIRE LOLOLOLOLOLOL\n",
+    "    \"\"\"\n",
     "\n",
     "    diffusor_submask_inner = np.array(\n",
     "        [\n",
@@ -402,18 +337,19 @@
     "        ]\n",
     "    )\n",
     "\n",
-    "    def __init__(self, L):\n",
+    "    def __init__(self, L, converter_obj):\n",
     "        \"\"\"\n",
-    "        LLAPACK\n",
+    "        AFIREA DFJASDFLKADJFLAKJDAKFJADSKLFJASDKLFJAS\n",
     "        \"\"\"\n",
     "\n",
     "        self.L = L\n",
     "        self.W = (L+1)/2\n",
     "\n",
+    "        print(converter_obj.index_to_coords(L))\n",
     "\n",
-    "        for line in range(self.L):\n",
-    "            for col in range(self.W):\n",
-    "                    \n",
+    "        # for line in range(self.L):\n",
+    "        #     for col in range(self.W):\n",
+    "        #         converter_obj.coords_to_index(1)\n",
     "                "
    ]
   },
@@ -424,9 +360,31 @@
    "outputs": [],
    "source": [
     "gaming = Converter(1001)\n",
-    "gaming.coord_array\n",
-    "gaming.index_array"
+    "gamig = Diffusor(10, gaming)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diffusor_submask_inner = np.array(\n",
+    "        [\n",
+    "            [0, 1/6, 1/6],\n",
+    "            [1/6, 0, 1/6],\n",
+    "            [1/6, 1/6, 0]\n",
+    "        ]\n",
+    "    )\n",
+    "Array = gaming.submask_flattener(diffusor_submask_inner, [1,1], [1,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
