Finished first draft of diffusion matrix initializer

--- a/2D_CA_ice.ipynb
+++ b/2D_CA_ice.ipynb
@@ -39,7 +39,7 @@
     "    \"\"\"\n",
     "    simulation_cell_mask = np.copy(sat_arr)\n",
     "    \n",
-    "    for i in range(0, LONG_LEG_LENGTH):\n",
+    "    for i in range(LONG_LEG_LENGTH):\n",
     "        width = (i+2)//2\n",
     "        simulation_cell_mask[LONG_LEG_LENGTH - i-1,:width] = np.full(width, 1)\n",
     "\n",
@@ -281,7 +281,6 @@
     "                print(self.coords_to_index((physical_line, physical_col)))\n",
     "\n",
     "        return flattened_array\n",
-    "\n",
     "\n"
    ]
   },
@@ -344,13 +343,51 @@
     "\n",
     "        self.L = L\n",
     "        self.W = (L+1)/2\n",
+    "        self.total_indices = int(self.W*self.W) # Uses Gauss' formula to calculate total size (see doc)\n",
+    "        self.converter_obj = converter_obj\n",
     "\n",
     "        print(converter_obj.index_to_coords(L))\n",
     "\n",
     "        # for line in range(self.L):\n",
     "        #     for col in range(self.W):\n",
     "        #         converter_obj.coords_to_index(1)\n",
-    "                "
+    "\n",
+    "    def construct_default_diffusion_matrix(self):\n",
+    "\n",
+    "        diffusion_matrix = np.zeros((self.total_indices, self.total_indices)) # initialize diffusion matrix\n",
+    "\n",
+    "        ##### Set top row to zero diffusion #####\n",
+    "        for col in range(self.W):\n",
+    "            index = self.converter_obj.coords_to_index((0, col))\n",
+    "            diffusion_matrix[index, index] = 1 # sets up diffusion matrix such that the top row isn't subject to diffusion\n",
+    "\n",
+    "        ##### Set leftmost cells to diffuse following reflexion boundary conditions #####\n",
+    "        for line in range(1, self.L-2):\n",
+    "            index = self.converter_obj.coords_to_index((line, 0))\n",
+    "\n",
+    "            diffusion_matrix[index, :] = self.converter_obj.submask_flattener(self.diffusor_submask_flush, (line, 0), (1,0))\n",
+    "    \n",
+    "        ##### Set upper ragged matrix elements #####\n",
+    "        for col in range(1, self.W-1):\n",
+    "            line = self.L - 2*(col+1)\n",
+    "            index = self.converter_obj.coords_to_index((line, col))\n",
+    "\n",
+    "            diffusion_matrix[index, :] = self.converter_obj.submask_flattener(self.diffusor_submask_upper_ragged, (line, col), (1,1))\n",
+    "\n",
+    "        ##### Set lower ragged matrix elements #####\n",
+    "        for col in range(2, self.W-1):\n",
+    "            line = self.L - 2*col - 1\n",
+    "            index = self.converter_obj.coords_to_index((line, col))\n",
+    "\n",
+    "            diffusion_matrix[index, :] = self.converter_obj.submask_flattener(self.diffusor_submask_lower_ragged, (line, col), (1,1))\n",
+    "            \n",
+    "        ##### Set non-edge-case matrix elements #####\n",
+    "        for col in range(1, self.W-2):\n",
+    "            for line in range(1, self.L-2*col-3):\n",
+    "                index = self.converter_obj.coords_to_index((line, col))\n",
+    "\n",
+    "                diffusion_matrix[index, :] = self.converter_obj.submask_flattener(self.diffusor_submask_inner, (line, col), (1,1))\n",
+    "        \n"
    ]
   },
   {
