Implemented diffusion step

--- a/2D_CA_functional.ipynb
+++ b/2D_CA_functional.ipynb
@@ -2,189 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import numba as nb"
+    "import numba as nb\n",
+    "\n",
+    "import ice_funcs as icef"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Todo:\n",
+    "\n",
+    "- Appliquer la diffusion\n",
+    "- Gérer les conditions de diffusion\n",
+    "- Workout comment intégrer le filling field 'f'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CONSTANTS\n",
     "\n",
-    "L = 7\n",
+    "L = 1001\n",
     "W = (L+1)//2\n",
-    "INITIAL_SAT = 1\n",
-    "\n",
-    "# to compare with cartesian, origin in upper right corner and e_1 = [1,0], e_2 = [0,-1]\n",
-    "# REL_NEIGHBOR_POS_LIST = [\n",
-    "#     (0,-1),\n",
-    "#     (1,-1),\n",
-    "#     (1,0),\n",
-    "#     (0,1),\n",
-    "#     (-1,1),\n",
-    "#     (-1,0)\n",
-    "# ]\n",
-    "\n",
-    "# initialisation\n",
-    "\n",
-    "\n",
-    "\n",
-    "@nb.njit\n",
-    "def initialize_sat_map(l, w, initial_sat):\n",
-    "    sat_map = np.zeros((l,w), dtype=np.float64)\n",
-    "\n",
-    "    for line in range(l):\n",
-    "        for col in range((l - line + 1)//2):\n",
-    "            sat_map[line, col] = initial_sat\n",
-    "\n",
-    "\n",
-    "def construct_minimal_ice_map(l, w):\n",
-    "    ice_map = np.full((l, w), False, dtype=bool)\n",
-    "\n",
-    "    # minimum amount of initial ice that doesn't brick the model\n",
-    "    minimal_ice_coords = [\n",
-    "        (l-1,0),\n",
-    "        (l-2,0),\n",
-    "        (l-3,0),\n",
-    "        (l-3,1)\n",
-    "    ]\n",
-    "\n",
-    "    for tup in minimal_ice_coords:\n",
-    "        ice_map[tup[0], tup[1]] = True\n",
-    "\n",
-    "    return ice_map\n",
-    "\n",
-    "\n",
-    "@nb.njit\n",
-    "def is_legit_cell(line, col, L):\n",
-    "    return line<L and col<(L - line + 1)//2 and line>=0 and col>=0\n",
-    "\n",
-    "\n",
-    "@nb.njit\n",
-    "def get_neighbors(line, col, L):\n",
-    "    relative_nearest_neighbors = [\n",
-    "        (-1,0),\n",
-    "        (-1,1),\n",
-    "        (0,1),\n",
-    "        (1,0),\n",
-    "        (1,-1),\n",
-    "        (0,-1)\n",
-    "    ]\n",
-    "\n",
-    "    absolute_nearest_neighbors = np.empty((6, 2))\n",
-    "\n",
-    "    for i in range(len(relative_nearest_neighbors)):\n",
-    "        neighbor_line = line + relative_nearest_neighbors[i][0]\n",
-    "        neighbor_col = col + relative_nearest_neighbors[i][1]\n",
-    "\n",
-    "        if is_legit_cell(neighbor_line, neighbor_col, L):\n",
-    "            absolute_nearest_neighbors[i, :] = [neighbor_line, neighbor_col]\n",
-    "        else:\n",
-    "            absolute_nearest_neighbors[i, :] = [np.nan, np.nan]\n",
-    "\n",
-    "    return absolute_nearest_neighbors\n",
-    "\n",
-    "\n",
-    "@nb.njit\n",
-    "def construct_neighbor_array(l, w):\n",
-    "    neighbor_array = np.empty((l, w, 6, 2))\n",
-    "\n",
-    "    for line in range(l):\n",
-    "        for col in range((l - line + 1)//2):\n",
-    "            neighbor_array[line, col, :, :] = get_neighbors(line, col, l)\n",
-    "\n",
-    "    return neighbor_array\n",
-    "\n",
-    "\n",
-    "@nb.njit\n",
-    "def construct_boundary_map(ice_map, neighbor_array):\n",
-    "    l = np.shape(ice_map)[0]\n",
-    "    boundary_map = np.full_like(ice_map, 0, dtype=np.int8)\n",
-    "\n",
-    "    for line in range(l):\n",
-    "        for col in range((l - line + 1)//2):\n",
-    "            neighbor_coords = neighbor_array[line, col, :, :] # returns 6x2 array\n",
-    "            \n",
-    "            neighbor_counter = 0\n",
-    "\n",
-    "            if ice_map[line, col] != True:\n",
-    "                for i in range(np.shape(neighbor_coords)[0]):\n",
-    "                    neighbor_line = int(neighbor_coords[i,0])\n",
-    "                    neighbor_col = int(neighbor_coords[i,1])\n",
-    "\n",
-    "                    if not np.isnan(neighbor_line):\n",
-    "                        if ice_map[neighbor_line, neighbor_col] == True:\n",
-    "                            neighbor_counter += 1\n",
-    "\n",
-    "            boundary_map[line, col] = neighbor_counter\n",
-    "\n",
-    "    return boundary_map\n",
-    "                \n",
-    "\n",
-    "def construct_default_diffusion_rules(l, w):\n",
-    "    diffusion_rules = np.empty((l, w), dtype=list)\n",
-    "\n",
-    "    for line in range(1, l-3):\n",
-    "        diffusion_rules[line, 0] = [\n",
-    "            1/6,\n",
-    "            1/3,\n",
-    "            1/3,\n",
-    "            1/6,\n",
-    "            0, \n",
-    "            0\n",
-    "        ]\n",
-    "\n"
+    "INITIAL_SAT = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_l = 5\n",
-    "test_w = 3\n",
+    "test_neighbor_array = icef.construct_neighbor_array(L, W)\n",
+    "test_ice_map = icef.construct_minimal_ice_map(L, W)\n",
+    "test_boundary_map = icef.construct_boundary_map(test_ice_map, test_neighbor_array)\n",
+    "test_diffusion_rules = icef.construct_default_diffusion_rules(L,W)\n",
+    "test_initial_sat_map = icef.initialize_sat_map(L,W,1)\n",
     "\n",
-    "test_neighbor_array = construct_neighbor_array(test_l, test_w)\n",
-    "test_ice_map = construct_minimal_ice_map(test_l, test_w)\n",
-    "test_boundary_map = construct_boundary_map(test_ice_map, test_neighbor_array)\n",
-    "\n",
-    "# get_neighbors(0,0,1001)\n",
-    "# NA = construct_neighbor_array(101, 51)\n"
+    "%timeit icef.relax_sat_map(test_initial_sat_map, test_diffusion_rules, test_ice_map, test_boundary_map, test_neighbor_array, L)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[False False False]\n",
-      " [False False False]\n",
-      " [ True  True False]\n",
-      " [ True False False]\n",
-      " [ True False False]]\n",
-      "[[0 0 0]\n",
-      " [1 2 0]\n",
-      " [0 0 0]\n",
-      " [0 0 0]\n",
-      " [0 0 0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(test_ice_map)\n",
-    "print(test_boundary_map)"
+    "# print(test_neighbor_array)\n",
+    "# print(test_ice_map)\n",
+    "print(test_boundary_map[-5:,:5])"
    ]
   },
   {
