--- a/2D_CA_functional.ipynb
+++ b/2D_CA_functional.ipynb
@@ -17,11 +17,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Todo:\n",
+    "## Todo:\n",
     "\n",
     "- Appliquer la diffusion\n",
     "- Gérer les conditions de diffusion\n",
-    "- Workout comment intégrer le filling field 'f'"
+    "- Workout comment intégrer le filling field 'f'\n",
+    "- Continue commenting in `ice_funcs.py`"
    ]
   },
   {
@@ -87,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 16:56:21) \n[GCC 10.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
