--- a/2D_CA_functional.ipynb
+++ b/2D_CA_functional.ipynb
@@ -19,6 +19,7 @@
    "source": [
     "## Todo:\n",
     "\n",
+    "- **FIGURE OUT PROPER SYNTAX FOR DIFFUSION RULES (width and length restricted)**\n",
     "- Appliquer la diffusion\n",
     "- Gérer les conditions de diffusion\n",
     "- Workout comment intégrer le filling field 'f'\n",
@@ -62,6 +63,43 @@
     "# print(test_neighbor_array)\n",
     "# print(test_ice_map)\n",
     "print(test_boundary_map[-5:,:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@nb.njit\n",
+    "def change_element():\n",
+    "    arr = np.array([0,0])\n",
+    "    arr[1] = 1\n",
+    "\n",
+    "@nb.njit\n",
+    "def append_element():\n",
+    "    arr = np.array([0], dtype=np.int8)\n",
+    "    arr = np.append(arr, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
+    "import numpy as np\n",
+    "\n",
+    "mpl.rcParams[\"figure.dpi\"] = 300\n",
+    "\n",
+    "plt.plot([0,0,0, np.sqrt(3)/(2*20)],[0,0.05,0.1, 0.025], marker=\"H\", linewidth=0)\n",
+    "\n",
+    "plt.xlim(-1,1)\n",
+    "plt.ylim(-1,1)\n",
+    "\n",
+    "plt.gca().set_aspect(1)"
    ]
   },
   {
