--- a/2D_CA_functional.ipynb
+++ b/2D_CA_functional.ipynb
@@ -49,9 +49,11 @@
     "test_ice_map = icef.construct_minimal_ice_map(L, W)\n",
     "test_boundary_map = icef.construct_boundary_map(test_ice_map, test_neighbor_array)\n",
     "test_diffusion_rules = icef.construct_default_diffusion_rules(L,W)\n",
-    "test_initial_sat_map = icef.initialize_sat_map(L,W,1)\n",
+    "test_initial_sat_map = icef.initialize_sat_map(L,W)\n",
     "\n",
-    "%timeit icef.relax_sat_map(test_initial_sat_map, test_diffusion_rules, test_ice_map, test_boundary_map, test_neighbor_array, L)\n"
+    "\n",
+    "print(test_boundary_map[-5:,:5])\n",
+    "# %timeit icef.relax_sat_map(test_initial_sat_map, test_diffusion_rules, test_ice_map, test_boundary_map, test_neighbor_array, L)\n"
    ]
   },
   {
@@ -61,8 +63,7 @@
    "outputs": [],
    "source": [
     "# print(test_neighbor_array)\n",
-    "# print(test_ice_map)\n",
-    "print(test_boundary_map[-5:,:5])"
+    "# print(test_ice_map)\n"
    ]
   },
   {
@@ -126,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 16:56:21) \n[GCC 10.3.0]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
