--- a/2D_CA_functional.ipynb
+++ b/2D_CA_functional.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,32 @@
     "import numba as nb\n",
     "\n",
     "import ice_funcs as icef"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., ..., 1., 1., 1.],\n",
+       "       [1., 1., 1., ..., 1., 1., 1.],\n",
+       "       [1., 1., 1., ..., 1., 1., 1.],\n",
+       "       ...,\n",
+       "       [1., 1., 1., ..., 1., 1., 1.],\n",
+       "       [1., 1., 1., ..., 1., 1., 1.],\n",
+       "       [1., 1., 1., ..., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "icef.initialize_sat_map(1001,501)"
    ]
   },
   {
