put 'physical functions' into PhysicsUtilities

--- a/2D_CA_functional.ipynb
+++ b/2D_CA_functional.ipynb
@@ -45,9 +45,8 @@
    "source": [
     "## Todo:\n",
     "\n",
-    "- **FIGURE OUT PROPER SYNTAX FOR DIFFUSION RULES (width and length restricted)**\n",
+    "- Figure\n",
     "- Appliquer la diffusion\n",
-    "- Gérer les conditions de diffusion\n",
     "- Workout comment intégrer le filling field 'f'\n",
     "- Continue commenting in `ice_funcs.py`"
    ]
