JITed the GeneralUtilities class

--- a/2D_CA_functional.ipynb
+++ b/2D_CA_functional.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,26 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 1., 1., ..., 1., 1., 1.],\n",
-       "       [1., 1., 1., ..., 1., 1., 1.],\n",
-       "       [1., 1., 1., ..., 1., 1., 1.],\n",
-       "       ...,\n",
-       "       [1., 1., 1., ..., 1., 1., 1.],\n",
-       "       [1., 1., 1., ..., 1., 1., 1.],\n",
-       "       [1., 1., 1., ..., 1., 1., 1.]])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "icef.initialize_sat_map(1001,501)"
    ]
@@ -45,7 +28,10 @@
    "source": [
     "## Todo:\n",
     "\n",
-    "- Figure\n",
+    "- ***ISOLATE AND IRON OUT ALL KINKS IN ICE_FUNCS (COMMENT METHOD)***\n",
+    "- MAKE SURE THAT NEW CLASSES ARENT FUCKED UP\n",
+    "- make sure everything is numbafied\n",
+    "- Figure out how to diffuse_to_convergence\n",
     "- Appliquer la diffusion\n",
     "- Workout comment intégrer le filling field 'f'\n",
     "- Continue commenting in `ice_funcs.py`"
@@ -59,7 +45,7 @@
    "source": [
     "# CONSTANTS\n",
     "\n",
-    "L = 1001\n",
+    "L = 101\n",
     "W = (L+1)//2\n",
     "INITIAL_SAT = 1"
    ]
@@ -70,62 +56,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_neighbor_array = icef.construct_neighbor_array(L, W)\n",
-    "test_ice_map = icef.construct_minimal_ice_map(L, W)\n",
-    "test_boundary_map = icef.construct_boundary_map(test_ice_map, test_neighbor_array)\n",
-    "test_diffusion_rules = icef.construct_default_diffusion_rules(L,W)\n",
-    "test_initial_sat_map = icef.initialize_sat_map(L,W)\n",
+    "# intialize instance of GeneralUtilities\n",
+    "gu = icef.GeneralUtilities(L)\n",
     "\n",
+    "# check on all attributes\n",
+    "print(gu.L)\n",
+    "print(gu.W)\n",
+    "print(gu.neighbor_array)\n",
+    "print(gu.diffusion_rules[1,1])\n",
     "\n",
-    "print(test_boundary_map[-5:,:5])\n",
-    "# %timeit icef.relax_sat_map(test_initial_sat_map, test_diffusion_rules, test_ice_map, test_boundary_map, test_neighbor_array, L)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(test_neighbor_array)\n",
-    "# print(test_ice_map)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@nb.njit\n",
-    "def change_element():\n",
-    "    arr = np.array([0,0])\n",
-    "    arr[1] = 1\n",
-    "\n",
-    "@nb.njit\n",
-    "def append_element():\n",
-    "    arr = np.array([0], dtype=np.int8)\n",
-    "    arr = np.append(arr, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib as mpl\n",
-    "import numpy as np\n",
-    "\n",
-    "mpl.rcParams[\"figure.dpi\"] = 300\n",
-    "\n",
-    "plt.plot([0,0,0, np.sqrt(3)/(2*20)],[0,0.05,0.1, 0.025], marker=\"H\", linewidth=0)\n",
-    "\n",
-    "plt.xlim(-1,1)\n",
-    "plt.ylim(-1,1)\n",
-    "\n",
-    "plt.gca().set_aspect(1)"
+    "%timeit icef.GeneralUtilities(1001)"
    ]
   },
   {
