--- a/numba_test.ipynb
+++ b/numba_test.ipynb
@@ -92,6 +92,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class Causality:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.message = self.random_method()\n",
+    "\n",
+    "    def random_method(self):\n",
+    "        return \"Bruh\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = Causality()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
