First draft of SaturationRelaxationUtilities

--- a/2D_CA_functional.ipynb
+++ b/2D_CA_functional.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., ..., 1., 1., 1.],\n",
+       "       [1., 1., 1., ..., 1., 1., 1.],\n",
+       "       [1., 1., 1., ..., 1., 1., 1.],\n",
+       "       ...,\n",
+       "       [1., 1., 1., ..., 1., 1., 1.],\n",
+       "       [1., 1., 1., ..., 1., 1., 1.],\n",
+       "       [1., 1., 1., ..., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "icef.initialize_sat_map(1001,501)"
    ]
@@ -28,6 +45,7 @@
    "source": [
     "## Todo:\n",
     "\n",
+    "- Finish SaturationRelaxationUtilities\n",
     "- ***ISOLATE AND IRON OUT ALL KINKS IN ICE_FUNCS (COMMENT METHOD)***\n",
     "- MAKE SURE THAT NEW CLASSES ARENT FUCKED UP\n",
     "- make sure everything is numbafied\n",
@@ -39,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,21 +70,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[False False False False False False False]\n",
+      " [False False False False False False False]\n",
+      " [False False False False False False False]\n",
+      " [ True False False False False False False]\n",
+      " [ True  True False False False False False]\n",
+      " [ True False False False False False False]\n",
+      " [ True False False False False False False]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# intialize instance of GeneralUtilities\n",
+    "gu = icef.GeneralUtilities(1001)\n",
+    "\n",
+    "ice_map_test = icef.construct_minimal_ice_map(1001, 501)\n",
+    "ice_map_test[1001-4,0] = True\n",
+    "print(ice_map_test[-7:,:7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [1 1 0 0 0 0 0]\n",
+      " [0 3 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = gu.construct_boundary_map(ice_map_test)[-7:, :7]\n",
+    "print(A)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# intialize instance of GeneralUtilities\n",
-    "gu = icef.GeneralUtilities(L)\n",
-    "\n",
-    "# check on all attributes\n",
-    "print(gu.L)\n",
-    "print(gu.W)\n",
-    "print(gu.neighbor_array)\n",
-    "print(gu.diffusion_rules[1,1])\n",
-    "\n",
-    "%timeit icef.GeneralUtilities(1001)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
