Mostly restructered ice_funcs.py and added SnowflakeSimulation class

--- a/2D_CA_functional.ipynb
+++ b/2D_CA_functional.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,26 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 1., 1., ..., 1., 1., 1.],\n",
-       "       [1., 1., 1., ..., 1., 1., 1.],\n",
-       "       [1., 1., 1., ..., 1., 1., 1.],\n",
-       "       ...,\n",
-       "       [1., 1., 1., ..., 1., 1., 1.],\n",
-       "       [1., 1., 1., ..., 1., 1., 1.],\n",
-       "       [1., 1., 1., ..., 1., 1., 1.]])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "icef.initialize_sat_map(1001,501)"
    ]
@@ -44,20 +27,22 @@
    "metadata": {},
    "source": [
     "## Todo:\n",
-    "\n",
+    "- ***Figure out if I actually need to hold on to timings... and if yes... how ?***\n",
+    "    - Idea : If a boundary cell has turned to ice, add it's growth time to *global time*, if two cells turn... add them both?\n",
+    "- Figure out what to do with `sat_opp_average()` and where to put it's dependents (might end up in physics...)\n",
+    "- Add deferred types for all classes in `ice_funcs.py`\n",
     "- Finish SaturationRelaxationUtilities\n",
-    "- ***ISOLATE AND IRON OUT ALL KINKS IN ICE_FUNCS (COMMENT METHOD)***\n",
-    "- MAKE SURE THAT NEW CLASSES ARENT FUCKED UP\n",
-    "- make sure everything is numbafied\n",
     "- Figure out how to diffuse_to_convergence\n",
-    "- Appliquer la diffusion\n",
-    "- Workout comment intégrer le filling field 'f'\n",
+    "\n",
+    "\n",
+    "## Backburner-type-beat:\n",
+    "- make sure everything is numbafied\n",
     "- Continue commenting in `ice_funcs.py`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,23 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[False False False False False False False]\n",
-      " [False False False False False False False]\n",
-      " [False False False False False False False]\n",
-      " [ True False False False False False False]\n",
-      " [ True  True False False False False False]\n",
-      " [ True False False False False False False]\n",
-      " [ True False False False False False False]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# intialize instance of GeneralUtilities\n",
     "gu = icef.GeneralUtilities(1001)\n",
@@ -98,23 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [1 1 0 0 0 0 0]\n",
-      " [0 3 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = gu.construct_boundary_map(ice_map_test)[-7:, :7]\n",
     "print(A)\n"
