--- a/test_graph.ipynb
+++ b/test_graph.ipynb
@@ -38,8 +38,10 @@
     "test_ice_map[L-9,0] = True\n",
     "test_ice_map[L-9,2] = True\n",
     "\n",
-    "R = snp.convert_ice_map_to_all_coords(test_ice_map, L)/20\n",
-    "%timeit snp.convert_ice_map_to_all_coords(test_ice_map, L)/20\n"
+    "converter = snp.CoordsFromIceMap(L)\n",
+    "R = converter.convert_ice_map_to_all_coords(test_ice_map)/20\n",
+    "\n",
+    "%timeit converter.convert_ice_map_to_all_coords(test_ice_map)/20"
    ]
   },
   {
