laid out game plan

--- a/2D_CA_snowflakes.ipynb
+++ b/2D_CA_snowflakes.ipynb
@@ -28,16 +28,20 @@
    "source": [
     "## Todo:\n",
     "- ***Figure out if I actually need to hold on to timings... and if yes... how ?***\n",
-    "    - Idea : If a boundary cell has turned to ice, add it's growth time to *global time*, if two cells turn... add them both?\n",
+    "    - Is the timing array even needed &&&**[do not delete, just comment out]**&&&\n",
     "- Figure out what to do with `sat_opp_average()` and where to put it's dependents (might end up in physics...)\n",
-    "- Add deferred types for all classes in `ice_funcs.py`\n",
     "- Finish SaturationRelaxationUtilities\n",
     "- Figure out how to diffuse_to_convergence\n",
     "\n",
     "\n",
     "## Backburner-type-beat:\n",
     "- make sure everything is numbafied\n",
-    "- Continue commenting in `ice_funcs.py`"
+    "- Continue commenting in `ice_funcs.py`\n",
+    "\n",
+    "## Improvements\n",
+    "- Monopole matching\n",
+    "- correct geometry factors $G_b$ and $H_b$\n",
+    "- Causal timings?"
    ]
   },
   {
