Finished inner working of diffusion utilities, still need to make fully OO

--- a/2D_CA_snowflakes.ipynb
+++ b/2D_CA_snowflakes.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "icef.initialize_sat_map(1001,501)"
+    "# icef.initialize_sat_map(1001,501)"
    ]
   },
   {
@@ -29,9 +29,7 @@
     "## Todo:\n",
     "- ***Figure out if I actually need to hold on to timings... and if yes... how ?***\n",
     "    - Is the timing array even needed &&&**[do not delete, just comment out]**&&&\n",
-    "- Figure out what to do with `sat_opp_average()` and where to put it's dependents (might end up in physics...)\n",
-    "- Finish SaturationRelaxationUtilities\n",
-    "- Figure out how to diffuse_to_convergence\n",
+    "- Make relaxSaturationUtilities fully OOP\n",
     "\n",
     "\n",
     "## Backburner-type-beat:\n",
@@ -63,12 +61,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# intialize instance of GeneralUtilities\n",
-    "gu = icef.GeneralUtilities(1001)\n",
+    "su = icef.SaturationRelaxationUtilities()\n",
+    "A = np.empty((1000,1000))\n",
+    "B = np.empty((1000,1000))\n",
     "\n",
-    "ice_map_test = icef.construct_minimal_ice_map(1001, 501)\n",
-    "ice_map_test[1001-4,0] = True\n",
-    "print(ice_map_test[-7:,:7])"
+    "su.has_converged(A, B, 0.1)"
    ]
   },
   {
@@ -77,8 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = gu.construct_boundary_map(ice_map_test)[-7:, :7]\n",
-    "print(A)\n"
+    "Phys = icef.PhysicsUtilities(1,1)"
    ]
   },
   {
