Finally fuckinf fixed boundary map generator

--- a/2D_CA_snowflakes.ipynb
+++ b/2D_CA_snowflakes.ipynb
@@ -13,15 +13,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# icef.initialize_sat_map(1001,501)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -61,11 +52,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "su = icef.SaturationRelaxationUtilities()\n",
-    "A = np.empty((1000,1000))\n",
-    "B = np.empty((1000,1000))\n",
+    "gu = icef.GeneralUtilities(101) # general utilities\n",
     "\n",
-    "su.has_converged(A, B, 0.1)"
+    "pu = icef.PhysicsUtilities(0.01, 10) # physics utilities\n",
+    "\n",
+    "sru = icef.SaturationRelaxationUtilities(101, pu, 200)"
    ]
   },
   {
@@ -74,7 +65,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Phys = icef.PhysicsUtilities(1,1)"
+    "default_ice_map = np.full((101, 101), False)\n",
+    "default_ice_map[-1,0] = True\n",
+    "default_ice_map[-2,0] = True\n",
+    "default_ice_map[-3,0] = True\n",
+    "default_ice_map[-3,1] = True\n",
+    "\n",
+    "test_boundary_map = gu.construct_boundary_map(default_ice_map)\n",
+    "print(test_boundary_map[-5:,:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sru._distinguish_cells(default_ice_map, test_boundary_map)[0]"
    ]
   },
   {
