--- a/2D_CA_snowflakes.ipynb
+++ b/2D_CA_snowflakes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,9 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.2 ns ± 0.343 ns per loop (mean ± std. dev. of 7 runs, 10000000 loops each)\n",
+      "[[0 0 0 0 0]\n",
+      " [1 2 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]\n",
+      " [0 0 0 0 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "default_ice_map = np.full((101, 101), False)\n",
     "default_ice_map[-1,0] = True\n",
@@ -71,17 +84,30 @@
     "default_ice_map[-3,0] = True\n",
     "default_ice_map[-3,1] = True\n",
     "\n",
+    "%timeit test_boundary_map\n",
     "test_boundary_map = gu.construct_boundary_map(default_ice_map)\n",
     "print(test_boundary_map[-5:,:5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[97,  0],\n",
+       "       [97,  1]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sru._distinguish_cells(default_ice_map, test_boundary_map)[0]"
+    "sru._distinguish_cells(default_ice_map, test_boundary_map)[1]"
    ]
   },
   {
